[tool.poetry]
name = "volunteer_toronto_be"
version = "0.1.0"
description = ""
authors = ["Erik Derohanian <erik@erik-j.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
black = "^20.8b1"
drf-yasg = "^1.20.0"
dj_database_url = "^0.5.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"